2005-02-14 Orjan Friberg <orjanf@axis.com>

	* elfcore.h (elf_core_file_p): Move the call to
	elf_backend_object_p to allow the correct machine to be set before
	processing the program headers.

2005-02-14  Nick Clifton  <nickc@redhat.com>

	PR binutils/716
	* peicode.h (pe_bfd_copy_private_bfd_data): Copy the large address
	aware flag from the input bfd to the output bfd.

2005-02-11  Maciej W. Rozycki  <macro@mips.com>

	* elf32-mips.c (_bfd_mips_elf32_gprel16_reloc): Reject
	R_MIPS_LITERAL relocations for external symbols.
	* elf64-mips.c (mips_elf64_literal_reloc): Likewise.
	* elfn32-mips.c (mips_elf_literal_reloc): Likewise.

2005-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	* bfd-in2.h: Rebuilt.

2005-02-11  Paul Brook  <paul@codesourcery.com>

	* elf-bfd.h (struct elf_link_hash_table): Add
	is_relocatable_executable.
	* elf.c (_bfd_elf_link_hash_table_init): Initialize it.
	* elflink.c (bfd_elf_link_record_dynamic_symbol): Create local dynamic
	symbols in relocatable executables.
	(bfd_elf_record_link_assignment): Create dynamic section symbols in
	relocatable executables.
	(_bfd_elf_link_renumber_dynsyms): Ditto.
	(bfd_elf_final_link): Ditto.
	* elf32-arm.c (elf32_arm_final_link_relocate): Copy absolute
	relocations into relocatable executables.
	(elf32_arm_check_relocs): Crate dynamic sections for relocatable
	executables.  Also copy absolute relocations.
	(elf32_arm_adjust_dynamic_symbol): Don't create copy relocations
	in relocatable executables.
	(allocate_dynrelocs): Copy relocations for relocatable executables.
	Output dynamic symbols for symbols defined in linker scripts.

2005-02-11  Nick Clifton  <nickc@redhat.com>

	* libbfd.c (read_signed_leb128): Use an unsigned type for 'shift'
	to avoid a compile time warning.

	* coff-alpha.c (alpha_adjust_reloc_in): Remove redundant test from
	BFD_ASSERT.

	* coff-tic4x.c (coff_rtype_to_howto): Move definition before
	inclusion of coffcode.h so that it is actually picked up.
